# claude-ecom

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  VERSIONS.md  cli.py  install.ps1  install.sh  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh  validate-skills.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
agents/: audit-growth.md  audit-operations.md  audit-pricing.md  audit-product.md  audit-retention.md  audit-revenue.md
claude_ecom/: __init__.py  checks.py  cli.py  cohort.py  config.py  decomposition.py  inventory.py  loader.py  metrics.py  normalize.py  periods.py  pricing.py  product.py  report.py  review_engine.py  scoring.py  shopify_api.py  site_audit.py  sync.py
claude_ecom/templates/: README.md  _review_common.md.j2  abr.md.j2  audit_report.md.j2  business_review.md.j2  executive_summary.md.j2  mbr.md.j2  qbr.md.j2
docs/examples/: ACTION-PLAN.md  AUDIT-REPORT.md  QUICK-WINS.md  executive-summary.md  scores.json
ecom_analytics/: __init__.py  cli.py  cohort.py  config.py  decomposition.py  inventory.py  loader.py  metrics.py  normalize.py  periods.py  pricing.py  product.py  report.py  review_engine.py  scoring.py  shopify_api.py  site_audit.py  site_crawler.py  sync.py
ecom_analytics/templates/: _review_common.md.j2  abr.md.j2  action_plan.md.j2  audit_report.md.j2  mbr.md.j2  qbr.md.j2  quick_wins.md.j2  site_audit_report.md.j2
examples/online-retail-ii/: README.md  REVIEW.md
hooks/: hooks.json
scripts/: setup.sh
skills/ecom/: SKILL.md
skills/ecom-analytics/: SKILL.md
skills/ecom-analytics/references/: benchmarks.md  conversion-funnel.md  data-formats.md  executive-narratives.md  experiment-design.md  finding-clusters.md  product-analysis.md  recommended-actions.md  revenue-decomposition.md
skills/ecom-audit/: SKILL.md
skills/ecom-cohort/: SKILL.md
skills/ecom-context/: SKILL.md
skills/ecom-conversion/: SKILL.md
skills/ecom-experiment/: SKILL.md
skills/ecom-inventory/: SKILL.md
skills/ecom-pricing/: SKILL.md
skills/ecom-product/: SKILL.md
skills/ecom-quickwins/: SKILL.md
skills/ecom-revenue/: SKILL.md
skills/ecom-shopify-import/: SKILL.md
skills/ecom-site-audit/: SKILL.md
skills/ecom/references/: benchmarks.md  business-review-narratives.md  check-implementation-summary.md  cohort-analysis.md  data-formats.md  finding-clusters.md  health-checks.md  impact-formulas.md  inventory-analysis.md  pricing-analysis.md  recommended-actions.md  review-narratives.md  scoring-system.md  site-audit-checks.md  vertical-benchmarks.md
tests/: test_audit_e2e.py  test_checks.py  test_cli_review.py  test_cli_shopify.py  test_clusters.py  test_cohort.py  test_config.py  test_decomposition.py  test_loader.py  test_metrics.py  test_na_handling.py  test_normalize.py  test_periods.py  test_report.py  test_review_e2e.py  test_review_engine.py  test_review_json_schema.py  test_scores_json_schema.py  test_scoring.py  test_shopify_api.py  test_shopify_normalize.py  test_site_audit.py  test_site_crawler.py  test_sync.py
tests/fixtures/: online_retail_sample.csv  sample_inventory.csv  sample_orders.csv  sample_products.csv
tests/fixtures/shopify_api/: inventory_bulk.jsonl  orders_bulk.jsonl  products_bulk.jsonl
