[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-analytics"
version = "0.3.0"
description = "EC-specialized data analytics toolkit — audit, diagnose, and improve your ecommerce store"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hajime Takeda"},
]
keywords = ["ecommerce", "analytics", "audit", "shopify", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "pandas>=2.0",
    "click>=8.0",
    "jinja2>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
api = [
    "httpx>=0.27",
    "tomli>=2.0; python_version<'3.11'",
]
parquet = ["pyarrow>=14.0"]
site = ["playwright>=1.40"]
all = ["ecom-analytics[api,parquet,site]"]

[project.scripts]
ecom-analytics = "ecom_analytics.cli:cli"

[tool.setuptools.packages.find]
include = ["ecom_analytics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
